	- Assume Config.pm is installed, and hence remove it from the pre-reqs.
		This also stops a warning message generated because Config's version # is undef.
	- Likewise assume File::Spec and File::Temp are installed, and 'recent enough'.
		This is because the new code uses these 3 modules before specifying the pre-reqs.
	- Re-write the code in Build.PL and Makefile.PL which checks for Perl being 'recent enough',
		since the previous code, using a pre-req of "perl => '5.10.0'" generates a warning message
		when using Makefile.PL (for my current Perl V 5.14.2). Now we analyze $Config{version}.

1.08  Mon May 27 09:45:00 2013
	- Add data/56.gv, which is graphs/directed/biological.gv from Graphviz V 2.29.
	- Add data/57.gv, which is graphs/directed/arrows.gv from Graphviz V 2.29.
	- Add data/58.gv, which uses a clickable href in a table as an edge label.
	- Replace sub read_cvs_file(), using IO::File and Text::CSV_XS, with Text::CSV::Slurp.

1.07  Thu Nov  8 12:38:00 2012
	- No code changes.
	- For pre-reqs such as strict, warnings, etc, which ship with Perl, set the version # to 0.
		Reported as RT#80663 by Father Chrysostomos for Tree::DAG_Node.

1.06  Fri Oct 26 09:09:00 2012
	- Change the lexer to output start_scope and end_scope rather than open_brace and close_brace.
		Change the parser to output start_scope and end_scope rather than start_graph and end_graph.
		This emphasises the case of the stand-alone {...}. Change the default renderer to match.
	- Increment the brace count when a '{' is encountered. This means brace counts (after the first 1
		at the start of the input) will be 1 higher than before, and when a '}' is encountered they will
		also be 1 higher. Hence they count down to 1, not 0 as they used to do.
	- Add an entry to the lexer's FAQ to clarify output from these 3: digraph {}, subgraph {} and {}.
	- Fix a lexer bug which, when given {a [] b}, would lose node b because [] was empty. See data/54.gv.