@@ -7,9 +7,15 @@ Revision history for Perl extension GraphViz2::Marpa.
 		This also stops a warning message generated because Config's version # is undef.
 	- Likewise assume File::Spec and File::Temp are installed, and 'recent enough'.
 		This is because the new code uses these 3 modules before specifying the pre-reqs.
+	- Bump the pre-req for Perl from 5.10.0 to 5.14, since we 'use feature qw/unicode_strings/.
 	- Re-write the code in Build.PL and Makefile.PL which checks for Perl being 'recent enough',
 		since the previous code, using a pre-req of "perl => '5.10.0'" generates a warning message
 		when using Makefile.PL (for my current Perl V 5.14.2). Now we analyze $Config{version}.
+	- One CPAN Tester found tests failing even though Graphviz was installed.
+		The problem was that the Times font was missing. The new code should fail during 'perl Build.PL',
+		or 'perl Makefile.PL', rather than during testing, which is good.
+	- Rewrite the use of given/when in GraphViz2::Marpa::Renderer::GraphViz2 as a chain of 'if'
+		statements, in preparation for the removal of 'use feature qw/switch/' from Perl.
 
 1.08  Mon May 27 09:45:00 2013
 	- Add data/56.gv, which is graphs/directed/biological.gv from Graphviz V 2.29.
